microservices-connector/config/authN-authZ/chatQnA_authN_oauth.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: oauth2-keycloak-auth
  namespace: istio-system
spec:
  jwtRules:
  - issuer: http://${KEYCLOAK_ADDR}/realms/${REALM}
    jwksUri: http://${KEYCLOAK_ADDR}/realms/${REALM}/protocol/openid-connect/certs
  selector:
    matchLabels:
      istio: ingressgateway
