microservices-connector/config/authN-authZ/chatQnA_authZ_fakejwt.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: fake-jwt-example
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals:
        - testing@secure.istio.io/testing@secure.istio.io
    when:
    - key: request.auth.claims[groups]
      values:
      - group1
  selector:
    matchLabels:
      app: router-service
