microservices-connector/config/authN-authZ/chatQnA_authZ_oauth.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: chatqna-ext-authz
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - to:
    - operation:
        notPaths:
        - /realms/*
  selector:
    matchLabels:
      istio: ingressgateway
